# spectrometry-system

./: README.md
Librerias/: libavs_2.0.1.0_armhf.deb
Predictor/: entrenador.py
Predictor/Combustibles/Diesel A+/10ms/3.53V0.22A/: Medida_3.csv  Medida_6.csv
Predictor/Combustibles/Diesel A+/10ms/3.76V0.54A/: Medida_3.csv  Medida_4.csv  Medida_6.csv  Medida_7.csv
Predictor/Combustibles/Diesel A+/10ms/3.82V0.65A/: Medida_1.csv  Medida_2.csv  Medida_3.csv
Predictor/Combustibles/Diesel A+/10ms/3.88V0.80A/: Medida_3.csv  Medida_6.csv
Predictor/Combustibles/Diesel A+/10ms/3.93V0.99A/: Medida_3.csv  Medida_4.csv  Medida_7.csv
Predictor/Combustibles/Diesel A+/20ms/3.53V0.22A/: Medida_1.csv  Medida_2.csv  Medida_3.csv
Predictor/Combustibles/Diesel A+/20ms/3.63V0.33A/: Medida_3.csv
Spectra/: moc_renderarea.cpp  moc_spectro.cpp  moc_timestamp.cpp  predictions.cpp  predictions.h  renderarea.cpp  renderarea.h  spectro.cpp  spectro.h  spectro.pro  timestamp.cpp  timestamp.h
Spectra/Predictor/: escalador.pkl  modelo_knn.pkl  pca.pkl
Spectra/Predictor/Muestras/: DieselA+.csv  DieselA.csv  DieselC.csv
Spectra/build-release/: Makefile  Spectro  moc_renderarea.cpp  moc_spectro.cpp  moc_timestamp.cpp
SpectraGui3.0/Predictor/: predictor.py
SpectraGui3.0/Predictor/Muestras/: DieselB.csv
SpectraGui3.0/SpectraGui/: CMakeLists.txt  CMakeSettings.json  README.md
SpectraGui3.0/SpectraGui/headers/: SpectraGui.h  as7265x.h  chart.h  chartview.h  mainwindow.h  savitzky_golay_filter.h
SpectraGui3.0/SpectraGui/importantFiles/: compilationType.h  rc.qrc
SpectraGui3.0/SpectraGui/sources/: SpectraGui.cpp  as7265x.cpp  chart.cpp  chartview.cpp  mainwindow.cpp  predictions.cpp  savitzky_golay_filter.cpp
SpectraGui3.0/build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  SpectraGUI  build.ninja  cmake_install.cmake  qtcsettings.cmake
SpectraGui3.0/build-debug/SpectraGUI_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
SpectraGui3.0/build-debug/SpectraGUI_autogen/K6S233IZAZ/: moc_chartview.cpp.d  moc_mainwindow.cpp.d
SpectraGui3.0/build-debug/SpectraGUI_autogen/L7C3C7FETB/: qrc_rc.cpp
SpectraGui3.0/build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  SpectraGUI  build.ninja  cmake_install.cmake  qtcsettings.cmake
SpectraGui3.0/build-release/SpectraGUI_autogen/: deps  moc_predefs.h
SpectraGui3.0/build-release/SpectraGUI_autogen/K6S233IZAZ/: moc_chartview.cpp  moc_chartview.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
SpectraGui3.0/build-release/SpectraGUI_autogen/L7C3C7FETB/: qrc_rc.cpp
(+580 files in other folders)
